# arcsim-0.3.1

./: .gitignore  CMakeLists.txt  Makefile  Makefile.linux  README.md
conf/: sphere.json  sphere128.json
dependencies/: Makefile
dependencies/jsoncpp/src/jsontestrunner/: jsontestrunner
dependencies/jsoncpp/src/lib_json/: json_reader.os  json_value.os  json_writer.os
dependencies/jsoncpp/src/test_lib_json/: test_lib_json
lib/alglib/: CMakeLists.txt  manual.cpp.html
lib/alglib/src/: alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  diffequations.h  fasttransforms.cpp  fasttransforms.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  kernels_avx2.cpp  kernels_avx2.h  kernels_fma.cpp  kernels_fma.h  kernels_sse2.cpp  kernels_sse2.h  linalg.cpp  linalg.h  optimization.cpp  optimization.h  solvers.cpp  solvers.h  specialfunctions.cpp  specialfunctions.h  statistics.cpp  statistics.h
src/: TAGS  auglag.cpp  collision.cpp  displayphysics.cpp  dynamicremesh.cpp  eigen.cpp  eigen.hpp  io.cpp  lbfgs.cpp  lsnewton.cpp  nearobs.cpp  nlcg.cpp  opengl.hpp  physics.cpp  popfilter.cpp  simulation.cpp  simulation.hpp  solver.hpp  sovler.cpp  sparse.hpp  tags  taucs.cpp  trustregion.cpp  util.cpp  util.hpp  vectors.cpp  winport.hpp
